--- a/README
+++ b/README
@@ -1,1 +1,24 @@
+# Drug Repurposing Using Llama LLM Model
+
+## Project Overview
+This project leverages the Llama LLM model to identify and validate potential drug repurposing opportunities for treating specific diseases. The goal is to accelerate the drug discovery process by using advanced natural language processing techniques to analyze medical literature and predict drug-disease relationships.
+
+## Installation
+
+### Prerequisites
+- Python 3.8 or newer
+- pip
+
+### Libraries
+Install the required Python libraries using pip:
+
+```bash
+pip install transformers
+pip install pandas
+pip install numpy
+```
+### Usage
+To run the drug repurposing model, execute the following command:
+```bash
 streamlit run web_streamlit_for_instruct.py /home/xuan/Llama-3.1-8B
+```
